[gd_scene load_steps=30 format=2]

[ext_resource path="res://Boss.gd" type="Script" id=1]
[ext_resource path="res://Game Assets/Mobs/Boss/Attacking/SMASH1.png" type="Texture" id=2]
[ext_resource path="res://Game Assets/Mobs/Boss/Attacking/SMASH2.png" type="Texture" id=3]
[ext_resource path="res://Game Assets/Mobs/Boss/Attacking/SMASH3.png" type="Texture" id=4]
[ext_resource path="res://Game Assets/Mobs/Boss/Attacking/SMASH4.png" type="Texture" id=5]
[ext_resource path="res://Game Assets/Mobs/Boss/Attacking/SMASH5.png" type="Texture" id=6]
[ext_resource path="res://Game Assets/Mobs/Boss/Attacking/SMASH6.png" type="Texture" id=7]
[ext_resource path="res://Game Assets/Mobs/Boss/Attacking/SMASH7.png" type="Texture" id=8]
[ext_resource path="res://Game Assets/Mobs/Boss/Attacking/SMASH8.png" type="Texture" id=9]
[ext_resource path="res://Game Assets/Mobs/Boss/Idle/Boss-Idle.png" type="Texture" id=10]
[ext_resource path="res://Game Assets/Mobs/Boss/Walking/Boss-Walk1.png" type="Texture" id=11]
[ext_resource path="res://Game Assets/Mobs/Boss/Walking/Boss-Walk2.png" type="Texture" id=12]
[ext_resource path="res://Game Assets/Mobs/Boss/Walking/Boss-Walk3.png" type="Texture" id=13]
[ext_resource path="res://Game Assets/Mobs/Boss/Walking/Boss-Walk4.png" type="Texture" id=14]
[ext_resource path="res://Game Assets/Mobs/Boss/Walking/Boss-Walk5.png" type="Texture" id=15]
[ext_resource path="res://Game Assets/Mobs/Boss/Walking/Boss-Walk6.png" type="Texture" id=16]
[ext_resource path="res://Game Assets/Mobs/Boss/Walking/Boss-Walk7.png" type="Texture" id=17]
[ext_resource path="res://Game Assets/Mobs/Boss/Walking/Boss-Walk8.png" type="Texture" id=18]
[ext_resource path="res://Game Assets/Sounds/SFX Avalon/Ground Smashing Sound Effect.wav" type="AudioStream" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Attacking",
"speed": 13.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Walking",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 42.7132 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 548.612, 405.27 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 63.2974, 77.1597 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 18.2049
height = 63.6144

[sub_resource type="Animation" id=6]
resource_name = "Damaged"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.45098, 0.0509804, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "dying"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.219608, 0.0156863, 0.0156863, 1 ), Color( 0.686275, 0.0705882, 0.0705882, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "flash"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=9]
resource_name = "reset"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 25.1953, 10 )

[node name="Sun-Eater" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Attacking"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.161, -2.75 )
scale = Vector2( 1.147, 1 )
shape = SubResource( 2 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
position = Vector2( 16.0124, -2.6289 )
scale = Vector2( 1.57997, 0.966881 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( -16.7648, 0.765381 )
shape = SubResource( 3 )

[node name="AttackZone" type="Area2D" parent="."]
position = Vector2( 16.0124, -2.6289 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
position = Vector2( -14.964, -31.223 )
shape = SubResource( 4 )

[node name="HurtBox" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 16.0124, -2.6289 )
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -13.7701, 2.11848 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damaged = SubResource( 6 )
anims/dying = SubResource( 7 )
anims/flash = SubResource( 8 )
anims/reset = SubResource( 9 )

[node name="AntiStuck" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="AntiStuck"]
position = Vector2( -0.308884, 31.8127 )
shape = SubResource( 10 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 16.9874, -0.926582 )

[node name="Smash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_AttackZone_body_entered"]
[connection signal="body_exited" from="AttackZone" to="." method="_on_AttackZone_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]
[connection signal="area_entered" from="AntiStuck" to="." method="_on_AntiStuck_area_entered"]
